<resources>
    <string name="app_name">Word Game</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome to the game</string>
    <string name="falling_words_fragment_label">Falling Words</string>
    <string name="game_result_fragment_label">Game Result</string>
    <string name="start_game">Start Playing!</string>
    <string name="restart">Restart Game</string>
    <string name="sample_falling_word">Lets meet Taylor Swift\'s Daylight!!</string>
    <string name="wrong_button">Wrong Button</string>
    <string name="correct_button">Correct Button</string>
    <string name="go_to_start">Go to start</string>
    <string name="score_number">Score: %1$d</string>
    <string name="lives_number">Lives: %1$d</string>
    <string name="timer_secs">Timer: %1$d secs left</string>
    <string name="your_score_is">Grazie! Your score is: %1$s! Ciao.</string>
    <string name="welcome_text_title">Hola! This is a fun game to learn a language by saving words before they fall down to the bottom of the screen</string>
    <string name="welcome_text_subtitle">As of now, this game only support English-Spanish. You have to tap the right or wrong button based on the correctness of the translation when the Spanish word falls down</string>
    <string name="welcome_text_note">Note: The words will start falling down as soon as you tap the start button</string>
    <string name="unpolished_ui">(Please excuse me for the unpolished UI)</string>
</resources>