<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FallingWordsFragment">

    <TextView
        android:id="@+id/text_falling_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_falling_word"
        android:textSize="@dimen/falling_word_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_wrong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_wrong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/wrong_button"
        android:focusable="true"
        android:src="@drawable/ic_wrong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_correct"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_correct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/correct_button"
        android:focusable="true"
        android:src="@drawable/ic_correct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_wrong" />

</androidx.constraintlayout.widget.ConstraintLayout>